tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__readme_example_hooks_pre_merge.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized()
---
🔄 [36mSquashing 3 commits into a single commit[0m (2 files, [32m+45[0m)...
🔄 [36mGenerating squash commit message...[0m
[107m [0m  [1mfeat(api): Add user authentication endpoints[0m
[107m [0m  
[107m [0m  Implement login and token refresh endpoints with JWT validation.
[107m [0m  Includes comprehensive test coverage and input validation.
✅ [32mSquashed @ [2m[32m[HASH][0m[0m
🔄 [36mRunning pre-merge [1mtest[0m:[0m
[107m [0m  [1m[2m[34muv[0m run pytest[0m

============================= test session starts ==============================
collected 3 items

tests/test_auth.py::test_login_success PASSED                            [ 33%]
tests/test_auth.py::test_login_invalid_password PASSED                   [ 66%]
tests/test_auth.py::test_token_validation PASSED                         [100%]

============================== 3 passed in 0.8s ===============================

🔄 [36mRunning pre-merge [1mlint[0m:[0m
[107m [0m  [1m[2m[34muv[0m run ruff check[0m

All checks passed!

🔄 [36mMerging 1 commit to [1m[36mmain[0m[36m @ [2m[36m[HASH][0m[0m (no rebase needed)
[107m [0m  * [33m[HASH][m[33m ([m[1;36mHEAD[m[33m -> [m[1;32mfeature-auth[m[33m)[m feat(api): Add user authentication endpoints
[107m [0m   api/auth.py        | 31 [32m+++++++++++++++++++++++++++++++[m
[107m [0m   tests/test_auth.py | 14 [32m++++++++++++++[m
[107m [0m   2 files changed, 45 insertions(+)
✅ [32mMerged to [1m[32mmain[0m[0m (1 commit, 2 files, [32m+45[0m)
🔄 [36mRemoving [1m[36mfeature-auth[0m[36m worktree & branch in background[0m
