tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__remove.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized().as_ref()
---
🔄 [36mRemoving worktree for [1m[36mto-remove[0m...[0m
✅ [32mRemoved worktree for [1m[32mto-remove[0m[0m
