tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__remove_fish.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized().as_ref()
---
Removed worktree for [1mto-remove[0m
