tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__switch_create.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized().as_ref()
---
✅ [32mCreated new worktree for [1m[32mfeature[0m, changed directory to [2m[TMPDIR]/test-repo.feature[0m[0m
