tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__switch_create_fish.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized().as_ref()
---
Created new worktree for [1mfeature[0m at [TMPDIR]/test-repo.feature
